[package]
name = "shield"
version = "0.1.0"
edition = "2024"
description = "Wasmer anti-regression shield runner"

[[bin]]
name = "shield"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
humantime = "2.3.0"
rayon = "1.12.0"
subprocess = "0.2"
tar = "0.4.45"
flate2 = "1.1.9"
